--- a/login.html
+++ b/login.html
@@ -27,42 +27,19 @@
 <body>
     <body>		
 		<div id="top-bar" class="container">
-			<div class="row">
-				<div class="span8">
-					<div class="account pull-right">
-						<ul class="user-menu">
-							<li><a href="mis_compras.html">Mi Cuenta</a></li>
-							<li><a href="login.html">Iniciar sesion</a></li>
-							<li><a href="carrito_de_compras.html">Tu Carro</a></li>
-							<li><a href="index.html">Cerrar sesion</a></li>
-							<li><a href="registro.html">registrarse</a></li>
-						</ul>
-					</div>
-				</div>
+			
+			<div class="row container-fluid">
+					<ul class="user-menu">
+						<a href="inicio_cliente.html" class="logo pull-left"><img src="themes/images/logo.png" class="site_logo" alt=""></a>			
+						<li><a href="inicio_cliente.html">Inicio</a></li>
+						<li><a href="sobre_nosotros.html">Nosotros</a></li>
+						<li><a href="#">Mis datos</a></li>
+						<li><a href="mis_compras.html">Mis compras</a></li>					
+						<li><a href="carrito_de_compras.html">Carrito</a></li>
+						<li><a href="index.html">Cerrar sesión</a></li>		
+					</ul>
 			</div>
-		</div>
-		<div id="wrapper" class="container">
-			<section class="navbar main-menu">
-				<div class="navbar-inner main-menu">				
-					<a href="index.html" class="logo pull-left"><img src="themes/images/logo.png" class="site_logo" alt=""></a>
-					<nav id="menu" class="pull-right">
-						<ul>
-							<li><a>Perros</a>					
-								<ul>
-									<li><a href="./alimentoPerro.html">Alimentos</a></li>									
-									<li><a href="./accesorioPerro.html">Accesorios</a></li>								
-								</ul>
-							</li>															
-							<li><a>Gatos</a>					
-								<ul>
-									<li><a href="./alimentoGato.html">Alimentos</a></li>									
-									<li><a href="./accesorioGato.html">Accesorios</a></li>								
-								</ul>
-							</li>							
-						</ul>
-					</nav>
-				</div>
-			</section>			
+		</div>		
 			<section class="header_text sub">
 			<br>
             <div style="text-align: center;">
